gitops/apps/fastapi-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
  labels:
    app: fastapi-app
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
